2009-09-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Calendar.cs: Don't expose AlgorithmType property in NET_2_1
	* CultureInfo.cs: Don't expose CultureTypes in NET_2_1
	* NumberFormatInfo.cs: Don't expose NativeDigits in NET_2_1
	* GregorianCalendar.cs, HebrewCalendar.cs, HijriCalendar.cs,
	JapaneseCalendar.cs, KoreanCalendar.cs, TaiwanCalendar.cs,
	ThaiBuddhistCalendar.cs, UmAlQuraCalendar.cs: Don't expose 
	AlgorithmType property in NET_2_1

2009-07-26  Miguel de Icaza  <miguel@novell.com>

	* Calendar.cs: Do not add internal abstract methods to the
	Calendar class, it prevents derived classes from existing. 

2009-05-21  Atsushi Enomoto  <atsushi@ximian.com>

	* CultureInfo.cs : it seems that zh-Hant and zh-Hans are introduced
	  as almost alias  of zh-CHS/zh-CHT in vista and some new windows.
	  Add hacky support for them.

2009-01-07  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfo.cs : Fixed bug #462957. With empty target string it
	  should always return 0.

2008-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* CultureInfo.cs : applied patch by Robert Jordan,
	  fixed bug #402128. Create uninitialized parent culture
	  when required.

2008-07-28  Marek Safar <marek.safar@gmail.com>

	* GregorianCalendar.cs: Delay DateTime .cctor invocation.

2008-07-03  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* TextInfo.cs: Fix exceptions
	* StringInfo.cs
	* SortKey.cs:
	* RegionInfo.cs:
	* NumberFormatInfo.cs:
	* CultureInfo.cs:
	* CompareInfo.cs:
	* CharUnicodeInfo.cs: Fix parameter names

2008-07-03  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* UmAlQuraCalendar.cs:
	* ThaiBuddhistCalendar.cs
	* TaiwanCalendar.cs:
	* PersianCalendar.cs:
	* KoreanCalendar.cs:
	* JulianCalendar.cs:
	* JapaneseCalendar.cs:
	* HijriCalendar.cs:
	* HebrewCalendar.cs:
	* GregorianCalendar.cs:
	* EastAsianLunisolarCalendar.cs:
	* Calendar.cs: Fix parameter names

2008-06-28  Zoltan Varga  <vargaz@gmail.com>

	* CompareInfo.cs: Add a cache of SimpleCollator objects.
